--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     </footer>
 
     <script src="js/lang.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
     <script src="https://kit.fontawesome.com/794b85b760.js" crossorigin="anonymous"></script>
 </body>
 
