--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <img class="education__timeline-item__logo"
                                     src="assets/img/logos/Tampere_University_logo.png" alt="Logo Tampere University">
                                 <span class="education__timeline-item__date">01/2025 - 07/2025</span>
-                                <span class="education__timeline-item__location"><i
+                                <span class="education__timeline-item__location" data-i18n="education.tampere.location"><i
                                         class="fa-solid fa-location-dot"></i>Tampere, FINLANDE</span>
                                 <span class="education__timeline-item__diploma"><i
                                         class="fa-solid fa-graduation-cap"></i><span data-i18n="education.tampere.diploma">Niveau Bachelor 2</span></span>
@@ -154,7 +154,7 @@
                                 <img class="education__timeline-item__logo" src="assets/img/logos/Unisciel_logo.png"
                                     alt="Logo Unisciel">
                                 <span class="education__timeline-item__date">09/2025 - 07/2026</span>
-                                <span class="education__timeline-item__location"><i
+                                <span class="education__timeline-item__location" data-i18n="education.unisciel.location"><i
                                         class="fa-solid fa-location-dot"></i>A distance</span>
                                 <span class="education__timeline-item__diploma"><i
                                         class="fa-solid fa-graduation-cap"></i><span data-i18n="education.unisciel.diploma">Niveau L2</span></span>
